# leanvibe-ai

./: .env.development  .env.example  .gitignore  AGENTS.md  AI_INTEGRATION_STATUS.md  ARCHITECTURE.md  ARCHITECTURE_SIMPLIFICATION_PLAN.md  AUTONOMOUS_DEVELOPMENT_WORKFLOW.md  BACKEND_SERVICE_HEALTH_REPORT.md  BROWNFIELD_MIGRATION_GUIDE.md  CLAUDE.md  CONFIGURATION.md  CONNECTION_PERSISTENCE_COMPLETE.md  CONSOLIDATION_COMPLETION_SUMMARY.md  CONSOLIDATION_SUCCESS_REPORT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_GUIDE.md  DOCUMENTATION_CONSOLIDATION_ANALYSIS.md  DOCUMENTATION_TECHNICAL_DEBT_CLEANUP_REPORT.md  ENTERPRISE_TRANSFORMATION_PLAN.md  FEATURE_COVERAGE_MATRIX.md  FINAL_CONSOLIDATION_SUCCESS_REPORT.md  GEMINI.md  GLOSSARY.md  LEANVIBE_BACKEND_TECHNICAL_AUDIT_REPORT.md  LEANVIBE_MOBILE_VALIDATION_REPORT.md  MISSING_COMPONENTS_ANALYSIS.md  MOBILE_APP_ANALYSIS_REPORT.md  MOBILE_VALIDATION_EXECUTION_PLAN.md  MONITORING.md  MVP_GAPS_ANALYSIS.md  MVP_REALITY_CHECK_REPORT.md  NEXT_EPICS_PLAN.md  OPERATIONS_PLAYBOOK.md  PHASE_1_COMPLETION_REPORT.md  PRODUCTION_DEPLOYMENT_COMPLETE.md  PRODUCTION_READINESS_FINAL_ASSESSMENT.md  PRODUCTION_READINESS_PLAN.md  PRODUCTION_READINESS_VALIDATION.md  (+45 more)
leanvibe-backend/: .coveragerc  .editorconfig  .env.example  .env.production  .gitignore  .pre-commit-config.yaml  .quality_history.json  .yamllint  AI_DEVELOPMENT_GUIDE.md  API.md  API_ENTERPRISE.md  API_INTEGRATION_EXAMPLES.md  ARCHITECTURE.md  AUTHENTICATION_TEST_COMPLETION_REPORT.md  AUTHENTICATION_TEST_INFRASTRUCTURE_SUMMARY.md  AUTONOMOUS_DEPLOYMENT.md  BILLING_ENTERPRISE_GUIDE.md  BILLING_INTEGRATION.md  BROWNFIELD_MIGRATION_TOOLKIT.md  COMPREHENSIVE_INTEGRATION_VALIDATION_REPORT.md  CONSOLIDATION_LOG.md  CRITICAL_TESTING_GAPS_ANALYSIS.md  DEPENDENCY_RESOLUTION_REPORT.md  DEVELOPER_ONBOARDING.md  DEVELOPMENT_PRIORITIES.md  Dockerfile  ENTERPRISE.md  ENTERPRISE_API_DOCUMENTATION.yaml  ENTERPRISE_API_INTEGRATION_GUIDE.md  ENTERPRISE_AUTHENTICATION_GUIDE.md  ENTERPRISE_FEATURES.md  ENTERPRISE_INTEGRATION.md  ENTERPRISE_TESTING_COMPLETION.md  FRONTEND_IMPLEMENTATION_REPORT.md  GO_LIVE_CHECKLIST_AND_LAUNCH_READINESS.md  IMPLEMENTATION_PROGRESS_STATUS.md  INSTALLATION.md  INTERACTIVE_TUTORIALS.md  LEANVIBE_PLATFORM_ANALYSIS_AND_STRATEGIC_DOCUMENTATION_PLAN.md  LeanVibe_Enterprise_API.postman_collection.json  (+71 more)
leanvibe-backend/.claude/memory/: context_usage.json  ios_architecture_integration_session.md  meditation_integration_session.md  next_tasks.md  project_state.json  reflection.md
leanvibe-backend/.githooks/: commit-msg  pre-commit  pre-push
leanvibe-backend/.github/: branch-protection-develop.json  branch-protection-main.json  branch-protection.json  environment-production.json  environment-staging.json
leanvibe-backend/.github/workflows/: autonomous.yml  weekly.yml  (+4 more)
leanvibe-backend/alembic/: env.py
leanvibe-backend/app/: __init__.py  main.py
leanvibe-backend/budgets/: performance_sla.json
leanvibe-backend/config/: nginx-staging.template  performance_sla.json
leanvibe-backend/contracts/: README.md  asyncapi.yaml  generate.py  openapi.yaml
leanvibe-backend/deploy/: canary.sh  rollback.sh  synthetic_probes.sh
leanvibe-backend/docs/: ENHANCED_NLP_IMPLEMENTATION.md
leanvibe-backend/it_light/: test_audit_list.py  test_blueprint_versioning.py  test_directory_listing.py  test_logs_tail.py  test_logs_tail_sse.py  test_preview_images.py  test_storage_artifacts.py  test_storage_s3_mock.py
leanvibe-backend/k8s/: configmap.yaml  database.yaml  deployment.yaml  ingress.yaml  namespace.yaml  rbac.yaml  secrets.yaml  service.yaml  storage.yaml
leanvibe-backend/leanvibe-frontend/: eslint.config.mjs  jest.config.js  jest.setup.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
leanvibe-backend/monitoring/: README.md  alerts.py  dashboard.html  demo_monitoring.py  prometheus.yml
leanvibe-backend/nginx/: nginx.conf
leanvibe-backend/runbooks/: deployment-procedures.md  incident-response.md  monitoring-playbook.md
leanvibe-backend/scripts/: demo_autonomous_deployment.py  dev_shortcuts.sh  ios_device_test_runner.py  migration_smoke.py  run_integration_tests.py  security_audit.py  setup_enterprise_demo.py  validate_all_dependencies.py  validate_neo4j.py  validate_pipeline.py  validate_tree_sitter.py
leanvibe-backend/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
leanvibe-backend/test_results/: coverage.xml  pipeline_validation.json
leanvibe-backend/tests/: conftest.py  test_ai_service.py  test_ai_service_enhanced.py  test_architectural_violation_detector.py  test_assembly_line_integration.py  test_ast_graph_service.py  test_ast_integration.py  test_auth_system.py  test_authentication.py  test_basic.py  test_billing_system.py  test_cache_invalidation_basic.py  test_cache_warming_basic.py  test_cli_bridge_api.py  test_code_completion_endpoint.py  test_code_graph_service.py  test_comprehensive_integration_validation.py  test_connection_manager_enhanced.py  test_contracts.py  test_core_features_validation.py  test_critical_integration_paths.py  test_degradation_patterns.py  test_e2e_lightweight.py  test_e2e_workflows.py  test_end_to_end_ai_workflows.py  test_enhanced_l3_agent.py  test_enhanced_nlp_service.py  test_error_recovery.py  test_file_monitoring.py  test_graph_integration.py  test_incremental_graph_service.py  test_incremental_indexer.py  test_integration_performance.py  test_ios_architecture_integration.py  test_l3_agent_capabilities.py  test_mlx_performance_benchmarks.py  test_mock_benchmarks.py  test_mock_integration.py  test_models.py  test_monitoring_basic.py  (+25 more)
leanvibe-backend/tools/: coverage_gate.py  flaky_detector.py  metrics_dashboard.py  perf_regression.py  quality_ratchet.py  schema_drift.py
leenvibe-cli/: README.md  pyproject.toml  pytest.ini  run_tests.py  task_2_3_4_plan.md  test_enhanced_monitor.py  test_notifications.py
leenvibe-cli/leenvibe_cli/: __init__.py  client.py  config.py  main.py
leenvibe-cli/tests/: __init__.py  test_integration.py  test_notification_system.py  test_performance.py
(+1540 files in other folders)
